--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 #mybatis日志
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#配置mapper xml文件的路径
+mybatis-plus.mapper-locations=classpath:com/atguigu/demo/edu/mapper/xml/*.xml
 
